Fix navbar size inconsistency on mobile displays

--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -89,13 +89,13 @@ color: #fff;
 
 @media only screen and (max-width: 600px) {
     #nav-heading{
-        font-size: 1.1em;
+        font-size: 17px;
     }
     .dropdown {
-        font-size: .8em;
+        font-size: 13px;
       }
       .dropdown-content {
-        font-size: .95em;
+        font-size: 13px;
         min-width: 100px;
       }
 }
